[project]
name = "medical-ai-agent"
version = "3.4.0"
description = "CPU 최적화 의료 AI 에이전트 (Oracle Cloud 무료 VM 호환)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }

[project.dependencies]
fastapi = "0.111.0"
uvicorn = { extras = ["standard"], version = "0.29.0" }
httpx = "0.27.0"
onnxruntime-cpu = "1.17.0"  # 최신 버전은 메모리 소비가 큼
numpy = "1.24.3"  # 호환성 및 메모리 사용량 최적화
pydantic = "2.4.2"  # 경량 버전
transformers = "4.37.2"  # 메모리 최적화 버전
torch = "2.1.2"  # CPU 전용, 메모리 최적화
sentence-transformers = "2.2.2"
scikit-learn = "1.3.2"

[project.optional-dependencies]
test = [
  "pytest>=7.0.0,<8.0.0",
]
dev = [
  "black>=23.0.0,<24.0.0",
  "mypy>=1.0.0,<2.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
agent = "apps.agent.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 